Prepare to merge with 41a2d49f0a1ed298b8ab023ce634335464454fe7 - hand merge some files